# AgentHub

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  pyproject.toml
.github/: CONTRIBUTING.md  copilot-instructions.md
.github/workflows/: jest.yml  publish.yml  pytest.yml
custom_proj/: __init__.py  hello_world.py  openrouter.py
docs/: DIRECTORY_TREE.md  README.md  architecture.md  auto_client_usage.md  auto_llm_client.python.md  conventions.md  development.md  llm_client_usage.md
docs/claude4_5/: README.md
docs/gemini3/: README.md
docs/gpt5_2/: README.md
examples/: invoke.py
llmsdk_docs/: README.md
llmsdk_docs/claude4_5/: README.md  use_claude_on_bedrock.md
llmsdk_docs/claude4_6/: README.md
llmsdk_docs/gemini3/: README.md
llmsdk_docs/glm4_7/: README.md  llms.txt
llmsdk_docs/glm5/: README.md  llms.txt  quickstart.python.md
llmsdk_docs/gpt5_2/: README.md
src_py/: Makefile  README.md  pyproject.toml
src_py/agent_adapter/: __init__.py  auto_client.py  base_client.py  claude_client.py  client.py  gemini_client.py  hello_world.py  types.py
src_py/agent_adapter/claude4_5/: README.md  __init__.py  client.py
src_py/agent_adapter/gemini3/: __init__.py  client.py
src_py/agenthub/: __init__.py  auto_client.py  base_client.py  monitor.py  tracer.py  types.py  utils.py
src_py/agenthub/claude4_5/: __init__.py  client.py
src_py/agenthub/claude4_6/: __init__.py  client.py
src_py/agenthub/gemini3/: client.py
src_py/agenthub/glm4_7/: __init__.py  client.py
src_py/agenthub/glm5/: __init__.py  client.py
src_py/agenthub/gpt5_2/: __init__.py  client.py
src_py/agenthub/gpt5_4/: client.py
src_py/agenthub/integration/: __init__.py  playground.py  tracer.py  web_ui.py
src_py/agenthub/kimi_k2_5/: __init__.py  client.py
src_py/agenthub/qwen3/: __init__.py  client.py
src_py/examples/: base64_image_example.py  claude_basic_example.py  claude_stateful_example.py  claude_stateless_example.py  claude_thinking_example.py  claude_tool_use_example.py  image_understanding_example.py  llm_client_demo.py  monitoring_example.py  playground_example.py  prompt_cache_example.py  stateful_example.py  stateless_example.py  thinking_example.py  tool_calling_example.py  tool_use_example.py  trace_example.py  web_ui_example.py
src_py/integration/: README.md  __init__.py  tracer.py  web_ui.py
src_py/tests/: test_claude_client.py  test_client.py  test_hello_world.py  test_image_understanding.py  test_monitor.py  test_playground.py  test_prompt_cache_config.py  test_tracer.py  test_web_ui.py
src_ts/: .npmignore  Makefile  README.md  eslint.config.cjs  package-lock.json  package.json  tsconfig.json  verify_gemini3.cjs
tests/: test_openrouter.py
typescript/: .eslintrc.cjs  package.json
(+87 files in other folders)
